<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:padding="@dimen/temp_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/title"
                    android:layout_margin="@dimen/title_padding"
                    style="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New York"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"/>
                <TextView
                    android:id="@+id/temp_max"
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:padding="@dimen/temp_padding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/max_label"
                    app:layout_constraintTop_toBottomOf="@id/title"
                    app:layout_constraintLeft_toLeftOf="parent"/>
                <TextView
                    android:id="@+id/temp_min"
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:padding="@dimen/temp_padding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/min_label"
                    app:layout_constraintTop_toBottomOf="@id/temp_max"
                    app:layout_constraintLeft_toLeftOf="parent"/>
                <TextView
                    android:id="@+id/humidity"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:padding="@dimen/temp_padding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity_label"
                    app:layout_constraintTop_toBottomOf="@id/title"
                    app:layout_constraintLeft_toRightOf="@id/temp_max"/>
                <TextView
                    android:id="@+id/visibility"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:padding="@dimen/temp_padding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/visibility_label"
                    app:layout_constraintTop_toBottomOf="@id/humidity"
                    app:layout_constraintLeft_toRightOf="@id/temp_min"/>

                <TextView
                    android:id="@+id/confidence"
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:padding="@dimen/temp_padding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/confidence_label"
                    app:layout_constraintTop_toBottomOf="@id/temp_min"
                    app:layout_constraintLeft_toLeftOf="parent"/>

                <TextView
                    android:id="@+id/day_label"
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/temp_padding"
                    android:text="@string/tomorrow_label"
                    android:textColor="@color/blue"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/visibility"
                    app:layout_constraintRight_toRightOf="parent"/>
                <ImageView
                    android:id="@+id/icon"
                    android:layout_margin="@dimen/temp_padding"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:layout_constraintTop_toBottomOf="@id/day_label"
                    app:layout_constraintLeft_toRightOf="@id/visibility"
                    app:layout_constraintRight_toRightOf="parent"/>
                <TextView
                    android:id="@+id/weather_state"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/temp_padding"
                    android:text="Light rain"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/visibility"
                    app:layout_constraintTop_toBottomOf="@id/icon"/>
                <TextView
                    android:id="@+id/wind_spead"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/temp_padding"
                    android:text="Wind"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/visibility"
                    app:layout_constraintTop_toBottomOf="@id/weather_state"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
</layout>